Update build_page.css fix remove button overflow

--- a/pc_fe_building/src/main/resources/static/css/build_page.css
+++ b/pc_fe_building/src/main/resources/static/css/build_page.css
@@ -137,6 +137,9 @@ nav .tab-button[active] {
 /* Card content */
 .card-content {
   flex-grow: 1;
+  flex-shrink: 1;      
+  min-width: 0;         
+  word-wrap: break-word; 
 }
 
 .title {
